--- a/perguntasNome.html
+++ b/perguntasNome.html
@@ -18,7 +18,7 @@
         document.body.innerHTML += `Qual o primeiro índice da letra 'A' no seu nome ? <strong> ${nome.indexOf('a')} </strong> <br /> `;
         document.body.innerHTML += `Qual o último índice da letra 'A' no seu nome? <strong> ${nome.lastIndexOf('a')} </strong> <br /> `;
         document.body.innerHTML += `As últimas 3 letras do seu nome são:<strong> ${nome.slice(-3)} </strong> <br /> `;
-        document.body.innerHTML += `As palavras do seu nome são:<strong> ${nome.split}</strong> <br /> `;
+        document.body.innerHTML += `As palavras do seu nome são:<strong> ${nome.split(' ')}</strong> <br /> `;
         document.body.innerHTML += `Seu nome com letras maiscula: <strong> ${nome.toUpperCase()}</strong> <br /> `;
         document.body.innerHTML += `Seu nome com letras minúsculas: <strong> ${nome.toLowerCase()} </strong> <br /> `;
     </script>
